php script connection

--- a/phpscripts/demo.html
+++ b/phpscripts/demo.html
@@ -1,5 +1,5 @@
 <?php
-
+echo '{ "name":"John", "age":31, "city":"New York" }';
 $servername = "localhost";
 $username = "username";
 $password = "password";
